Fixed a bug in the homepage video that caused overflow issues - Added initial content to give page

--- a/assets/styles/jumbotron.scss
+++ b/assets/styles/jumbotron.scss
@@ -15,9 +15,9 @@
   position: absolute;
   top: -58px;
   z-index: -2;
-  width: 105%;
+  width: 100%;
   height: 100%;
-  left: -2.5%;
+  left: 0;
   object-fit: cover;
 
   @media screen and (max-width: 960px) {
@@ -112,7 +112,7 @@
     right: 0;
     bottom: 0;
     object-fit: cover;
-    object-position: center;
+    object-position: center var(--position, center);
   }
 
   .overlay {
